<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="@dimen/logo_width"
        android:layout_height="@dimen/logo_height"
        android:layout_marginBottom="@dimen/main_btnBig_margin_bottom"
        app:layout_constraintBottom_toTopOf="@+id/tv_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:src="@drawable/test"
        tools:srcCompat="@drawable/test" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/main_btnBig_margin_bottom"
        android:text="@string/titleOfApplication"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold"
        android:textColor="@color/color_black"
        app:layout_constraintBottom_toTopOf="@+id/btn_calculation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_calculation"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:onClick="onCalculationClick"
        android:layout_marginBottom="@dimen/main_btnLittle_margin_bottom"
        android:background="@color/color_for_main_btn"
        android:text="@string/str_calculation"
        app:layout_constraintBottom_toTopOf="@+id/btn_food"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_food"
        android:background="@color/color_for_main_btn"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:onClick="onFoodClick"
        android:layout_marginBottom="@dimen/main_btnLittle_margin_bottom"
        android:text="@string/str_food"
        app:layout_constraintBottom_toTopOf="@+id/btn_advice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_advice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onAdviceClick"
        android:layout_marginBottom="@dimen/main_btnLittle_margin_bottom"
        android:text="@string/str_advice"
        app:layout_constraintBottom_toTopOf="@+id/btn_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_info"
        android:layout_width="141dp"
        android:layout_height="49dp"
        android:onClick="onInfoClick"
        android:layout_marginBottom="@dimen/main_btnLittle_margin_bottom"
        android:text="@string/str_info"
        app:layout_constraintBottom_toTopOf="@+id/btn_exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="141dp"
        android:layout_height="49dp"
        android:onClick="onExitClick"
        android:text="@string/str_exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.94" />
</androidx.constraintlayout.widget.ConstraintLayout>