<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InformationActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/upper_part_height"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_logo"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/marL_marR_iv_tv"
                    android:layout_marginTop="@dimen/marT_marB_iv_tv"
                    android:layout_marginEnd="@dimen/marT_marB_iv_tv"
                    android:layout_marginBottom="@dimen/marL_marR_iv_tv"
                    android:src="@drawable/test"
                    app:srcCompat="@drawable/test" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/info_ll_ll_tv_marT"
                    android:text="@string/app_name"
                    android:textSize="@dimen/info_ll_ll_tv_textSize"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="end"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_to_main"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="@dimen/marT_marB_iv_tv"
                    android:layout_marginEnd="@dimen/marT_marB_iv_tv"
                    android:layout_marginBottom="@dimen/marL_marR_iv_tv"
                    android:background="@drawable/style_btn_circle"
                    android:onClick="onToMainButtonClick" />
            </LinearLayout>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_black"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_title_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/tv_title_textSize"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/marT_marB_iv_tv"
                    android:layout_marginBottom="@dimen/marL_marR_iv_tv"
                    android:textStyle="bold"
                    android:text="@string/info_title" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/info_ll_sv_tv_textSize"
                    android:layout_marginStart="@dimen/marL_marR_iv_tv"
                    android:layout_marginEnd="@dimen/marT_marB_iv_tv"
                    android:layout_marginBottom="@dimen/marL_marR_iv_tv"
                    android:text="@string/info_IMT_calculation" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/info_ll_sv_tv_textSize"
                    android:layout_marginStart="@dimen/marL_marR_iv_tv"
                    android:layout_marginEnd="@dimen/marT_marB_iv_tv"
                    android:layout_marginBottom="@dimen/marL_marR_iv_tv"
                    android:text="@string/info_calculation_elements_day" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/info_ll_sv_tv_textSize"
                    android:layout_marginStart="@dimen/marL_marR_iv_tv"
                    android:layout_marginEnd="@dimen/marT_marB_iv_tv"
                    android:layout_marginBottom="@dimen/marL_marR_iv_tv"
                    android:text="@string/info_KBZhU_calculation" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/info_ll_sv_tv_textSize"
                    android:layout_marginStart="@dimen/marStart"
                    android:layout_marginBottom="@dimen/marT_marB_iv_tv"
                    android:text="@string/info_diet" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>